# arabic-teaching-multi-agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Implementation_plan.md  PROJECT_MANAGEMENT.md  README.md  SETUP_COMPLETE.md  STATUS.md  STATUS_SUMMARY.md  TEST_STATUS.md  TODO.md  TODO_PROMPTS.md  TOOLING.md  WORK_SUMMARY_2026-04-14.md  app.py  app_inference_client.py  content_loader.py  engine.py  lesson_cache.json  pyproject.toml  requirements.txt
.claude/skills/: code-review.md  tests-audit.md  validate-rag-content.md
.github/workflows/: main.yml  pr.yml
data/: vocab_by_category.txt  vocab_conversational.txt
data/evaluation/: baseline_outputs.json  baseline_report.md  content_agent_test_cases.json  rag_evaluation_results.json  rag_test_cases.json  teaching_agent_test_cases.json  test_cases.json
data/raw/: tatoeba_arabic.txt  vocab_master.txt
data/training/: CONVERSATION_STRUCTURE.md  TRAINING_DATA_V3_NOTES.md  TRAINING_DATA_V4_NOTES.md  TRAINING_DATA_V5_NOTES.md  TRAINING_DATA_V6_NOTES.md  agent1_teaching_additional_fixes.jsonl  agent1_teaching_casual_affirmations.jsonl  agent1_teaching_numeric_responses.jsonl  agent1_teaching_training_data.jsonl  agent1_teaching_training_data_OLD.jsonl  agent1_teaching_training_data_v2.jsonl  agent1_teaching_training_data_v3.jsonl  agent2_grading_training_data.jsonl  combined_training_data.jsonl  common_errors_conversations.jsonl  edge_cases_conversations.jsonl  error_validation_conversations.jsonl  exercise_generation_training_data.jsonl  exercise_variety_conversations.jsonl  full_flow_conversations.jsonl  grading_mode_training_data.jsonl  grammar_only_conversations.jsonl  lesson_1_conversations.jsonl  lesson_2_conversations.jsonl  lesson_8_conversations.jsonl  teaching_mode_training_data.jsonl  training_data.jsonl  training_data_v2.jsonl  training_data_v3.jsonl  training_data_v4.jsonl  training_data_v5.jsonl  training_data_v6.jsonl  validate_training_data.py  vocab_only_batch2.jsonl  vocab_only_complete.jsonl  vocab_only_conversations.jsonl  vocab_only_expanded.jsonl  vocab_only_final.jsonl
docs/: API_CONTRACT.md  ARCHITECTURE.md  CURRICULUM_SEQUENCE.md  DEPLOYMENT.md  INFERENCE.md  PROMPTS_INVENTORY.md  PROMPT_DESIGN.md  WORKFLOW.md
models/: README.md
prompts/: base.py  registry.py
rag/: ingestion.py  retriever.py  vectorstore.py
scripts/: build_lesson_cache.py  combine_training_data.py  generate_exercise_generation_training_data.py  generate_grading_training_data.py  generate_teaching_training_data.py  run_content_agent_baseline.py  run_content_agent_baseline_7b.py  run_content_agent_eval.py  run_content_agent_evaluation.py  run_grading_baseline.py  setup_vectorstore.py  test_rag_retrieval.py  test_retrieval.py  training_data_builder.py  validate_rag_content.py
tests/: test_batch_word_tracking.py  test_content_agent_word_selection.py  test_orchestrator_routing.py  test_orchestrator_short_responses.py  test_orchestrator_single_scenario.py  test_prompts_base.py  test_prompts_registry.py  test_prompts_utils.py  test_rag_vectorstore.py
training/: README.md  finetune.py  sagemaker_finetune_qwen3b.ipynb  sagemaker_finetune_qwen7b_grading.ipynb  sagemaker_finetune_qwen7b_teaching.ipynb  sagemaker_finetune_qwen7b_teaching_v2.ipynb
(+241 files in other folders)
