[project]
name = "arabic-teaching-multi-agent"
version = "0.1.0"
description = "Multi-agent RAG system for Arabic language teaching with LangGraph orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kelly Diabagate", email = "your.email@example.com"}
]

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",

    # LangChain & LangGraph
    "langchain>=0.1.0",
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",

    # RAG
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",

    # Model (for fine-tuned Qwen)
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.5.0",
    "accelerate>=0.20.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",

    # UI
    "streamlit>=1.31.0",

    # Utilities
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",        # Linting + formatting (replaces black, flake8, isort)
    "mypy>=1.0.0",        # Type checking
    "pytest>=7.4.0",      # Testing
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]  # v2: Will contain agents, orchestration, rag, evaluation

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (ruff format handles this)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "chromadb",
    "chromadb.*",
    "transformers.*",
    "peft.*",
    "frontmatter",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# v2: Coverage disabled until src/ modules are implemented
addopts = "-v --strict-markers"
# Future v2 coverage: --cov=src --cov-report=term-missing --cov-fail-under=95
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
# v2: Will cover src/ modules when implemented
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/scripts/*",
    "*/v1/*",  # Archived v1 code
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
# v2: Temporarily set to 0 until src/ modules exist, will return to 95
fail_under = 0

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.1.0",
]
